Ejercico clase 2 Frontend clases

--- a/02CSS/inde.html
+++ b/02CSS/inde.html
@@ -2,13 +2,86 @@
 <html>
     <header>
         <title>Ejemplo HTML y  CSS</title>
+        <link rel="stylesheet" href="css/style.css">
     </header>
     <body>
         
         <h1 style="color:blue; text-align:center;">Ejemplo de CSS por medio del atributo style</h1>
         <h2 style="color:green; text-align:center;">Etiqueta de bloque y etiquetas de linea HTML</h2>
-        <div style="background-color:yellow";>Este es un parrafo dentro de un div
-        <span style="background-color:greenyellow;"> Este es un span dentro de un div </span>
-        </div>
+        <div style="background-color:yellow";>Este es un parrafo dentro de un div </div>
+        <span style="background-color:greenyellow;"> Este es un span </span>
         
+        <div style="background-color:rgb(179, 73, 73);font-size: small;">
+            <label>Nombre del cliente</label>
+            <input type="text"></input>
+            <br>
+            <label>Apellido Paterno</label>
+            <input type="text"></input>
+            <br>
+            <label>Apellido Materno</label>
+            <input type="text"></input>
+            <br>5
+            <label>Fecha de Nacimiento</label>
+            <input type="date"></input>
+            <br>
+            <button type="button">Enviar</button>
+            <button type="button">Modificar datos del cliente</button>
+
+        </div>
+
+        <h1>Ejemplo de CSS por medio de una hoja de estilos externa CSS</h1>
+
+        <div>
+            <h2> <label>Buscador de viajes</label> </h2>
+            <br>
+            <label>Origen</label>
+            <input type="text"></input>
+            <br>
+            <label>Destino</label>
+            <input type="text"></input>
+            <br>
+            <label>Fecha:</label>
+            <input type="date"></input>
+            <br>
+            <button class="azul">Buscar</button>
+            <button class="verde">Cancelar</button>
+
+        </div>
+
+        <p class="azul text-20"> Africam Safari started as a private animal collection 
+                owned by Carlos Camacho Espíritu, a veteran, pilot, 
+                radio host and business man, who lived in Valsequillo, 
+                Puebla. Camacho got the idea to create a park where animals 
+                could develop and reproduce their species in areas resembling 
+                their habitat in the wild. Camacho called this zoo prototype 
+                Africam, a portmanteau of Africa (continent where most of the 
+                species in the zoo come from) and his last name Camacho
+        </p>
+
+        <p class="verde text-35">
+            Africam Safari started as a private animal collection 
+                owned by Carlos Camacho Espíritu, a veteran, pilot, 
+                radio host and business man, who lived in Valsequillo, 
+                Puebla. Camacho got the idea to cr5eate a park where animals 
+                could develop and reproduce their species in areas resembling 
+                their habitat in the wild. Camacho called this zoo prototype 
+                Africam, a portmanteau of Africa (continent where most of the 
+                species in the zoo come from) and his last name Camacho
+
+        </p>
+
+        <p class="text-20">
+            Africam Safari started as a private animal collection 
+                owned by Carlos Camacho Espíritu, a veteran, pilot, 
+                radio host and business man, who lived in Valsequillo, 
+                Puebla. Camacho got the idea to create a park where animals 
+                could develop and reproduce their species in areas resembling 
+                their habitat in the wild. Camacho called this zoo prototype 
+                Africam, a portmanteau of Africa (continent where most of the 
+                species in the zoo come from) and his last name Camacho
+
+        </p>
+
+    </body>
+
 </html>
