--- a/02CSS/inde.html
+++ b/02CSS/inde.html
@@ -82,6 +82,37 @@
 
         </p>
 
+        <div class="color-by-name">
+            <label>Origen</label>
+            <input type="text"></input>
+            <br>
+            <label>Destino</label>
+            <input type="text"></input>
+            <br>
+            <button class="verde">Cancelar</button>
+            <br><br>
+        </div>
+        <div class="color-by-hex">
+            <label>Origen</label>
+            <input type="text"></input>
+            <br>
+            <label>Destino</label>
+            <input type="text"></input>
+            <br>
+            <button class="verde">Cancelar</button>
+        </div>
+
+         <div class="color-by-rgb">
+            <label>Origen</label>
+            <input type="text"></input>
+            <br>
+            <label>Destino</label>
+            <input type="text"></input>
+            <br>
+            <button class="verde">Cancelar</button>
+        </div>
+
+
     </body>
 
 </html>
