--- a/Flexbox/Ejercicio/index_1.html
+++ b/Flexbox/Ejercicio/index_1.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>     
 
     <head>
-        <title>Ejemplo Flexbox SAMPLE</title>
-
+        <title>Ejemplo Flexbox SAMPLE</title> 
+        <link rel="stylesheet" href="style_1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-
-        <link rel="stylesheet" href="style_1.css">   
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Coral+Pixels&family=Jacquard+12&family=Mountains+of+Christmas:wght@400;700&family=Rock+Salt&display=swap" rel="stylesheet">    </head>
+     </head>     
         <body>
-            <div class="contenedor">
-                    <h1>Sample Flexbox Example</h1>
+            <div class="contenedor"> <h1>Sample Flexbox Example</h1> </div>
+
+                <div class="card">
+                    <div class="card-child">
+                        <h2>First Article</h2> 
+                        <p class="Text_1">Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+                    </div>    
+                
+                    <div class="card-child">
+                        <h2>Second Article</h2>
+                        <p class="Text_2">Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+
+                    </div> 
+                
+                    <div class="card-child">
+                        <h2>Third Article</h2> 
+                        <p class="Text_3">Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
+                    </div>     
+                </div> 
+        </body>
+</html>
